fixed image squishing

--- a/css/style.css
+++ b/css/style.css
@@ -179,6 +179,7 @@ form{
     display: flex;
     flex-direction: row;
     margin-top:1rem;
+    align-self: center;
 }
 .expertsImgs{
     border-radius: 100%;
